--- a/package.json
+++ b/package.json
@@ -5,18 +5,42 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate:nexus": "nodemon --exec 'ts-node --transpile-only -P nexus.tsconfig.json pages/api/graphql' --ext 'ts' --watch '*/graphql/**/*.ts'",
+    "generate:genql": "nodemon --exec 'genql --schema ./graphql/schema.graphql --output ./graphql/generated/genql'  --watch 'graphql/schema.graphql'",
+    "generate": "concurrently \"npm run generate:nexus\" \"npm run generate:genql\""
   },
   "dependencies": {
+    "@genql/runtime": "^2.9.0",
+    "@heroicons/react": "^1.0.5",
+    "@prisma/client": "^3.8.1",
+    "apollo-server-micro": "^2.25.2",
+    "formidable": "^2.0.1",
+    "formik": "^2.2.9",
+    "graphql": "^15.8.0",
+    "graphql-scalars": "^1.14.1",
     "next": "12.0.8",
+    "nexus": "^1.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@genql/cli": "^2.9.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@types/formidable": "^2.0.3",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.2",
+    "concurrently": "^7.0.0",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
+    "nodemon": "^2.0.15",
+    "postcss": "^8.4.5",
+    "prisma": "^3.8.1",
+    "tailwindcss": "^3.0.15",
+    "ts-node": "^10.4.0",
     "typescript": "4.5.5"
   }
 }
