--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server and MongoDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="mongodb+srv://foster-moore:zf0AXOUBo76TazIP@cluster0.y2w3r.mongodb.net/foster-moore?retryWrites=true&w=majority"
